<resources>
    <string name="app_name">My App_Movie</string>
    <string name="get_tickets">Get tickets</string>
    <string name="my_tickets">My tickets</string>
    <string name="description">Pirates of the Caribbean: A dangerous group of pirates, led by a particularly dark pirate known as Captain Barbarossa, threatens the peace of the inhabitants of the Caribbean islands at the end of the 17th century. An energetic young man, whose beloved has been kidnapped by the pirates, sets out to rescue her with the help of Captain Jack Sparrow.</string>
    <string name="adult_tickets">Adult Tickets</string>
    <string name="child_tickets">Child Tickets</string>
    <string name="choose_date">Choose Date</string>
    <string name="date_not_selected">Date not selected</string>
    <string name="choose_theater">Choose Theater:</string>
    <string name="buy_tickets">Buy Tickets</string>
    <string name="details_will_appear_here">Details will appear here</string>
    <string name="please_select_at_least_one_ticket">Please select at least one ticket.</string>
    <string name="please_choose_a_date">Please choose a date.</string>
    <string name="please_select_a_theater">Please select a theater.</string>
    <string name="date">Date</string>
    <string name="theater">Theater</string>
    <string name="total_cost">Total Cost</string>
    <string name="order_status_ok">Order Status: OK</string>
    <string name="you_have_no_tickets">You have no tickets</string>
    <string name="you_cant_buy_more_than_500_tickets">You can not buy more than 500 tickets</string>
    <string name="adult_price_10">Adult price:10$</string>
    <string name="child_price_5">Child price:5$</string>
    <string name="like">Like</string>
    <string name="swap_2_image">swap 2 image</string>
    <string name="time">Time</string>
    <string name="please_select_time">Please select Time</string>
    <string name="rating">Rating</string>
    <string name="watched_the_movie_rate_it">Watched the movie? Rate it!</string>
    <string name="rate">Rate</string>
    <string name="rating_5_10">Rating: 5/10</string>
    <string name="thanks_for_rating">Thanks for rating</string>
</resources>