<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
             android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="113dp">
        <!-- Ticket Type and Quantity -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/adult_tickets" />

        <EditText
            android:id="@+id/editTextNumberAdultTickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/adult_price_10"
            android:minHeight="48dp"
            android:inputType="number" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/child_tickets" />

        <EditText
            android:id="@+id/editTextNumberChildTickets"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/child_price_5"
            android:minHeight="48dp"
            android:inputType="number" />

        <!-- Viewing Date -->
        <Button
            android:id="@+id/buttonChooseDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/choose_date" />

        <TextView
            android:id="@+id/textViewChosenDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date_not_selected"/>


        <!-- Theatre Selection -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/choose_theater" />

        <Spinner
            android:id="@+id/spinnerTheater"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"/>


        <!-- Total Price -->
        <TextView
            android:id="@+id/textViewTotalPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text="@string/total_cost"/>

        <TextView
            android:id="@+id/textViewAlert"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:minHeight="48dp"
            android:text=""/>

        <!-- Confirm Tickets Button -->
        <Button
            android:id="@+id/buttonConfirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/black"
            android:text="@string/buy_tickets" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>