<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textViewPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/watched_the_movie_rate_it" />

    <TextView
        android:id="@+id/textViewRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating_5_10"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="8dp" />

    <SeekBar
        android:id="@+id/seekBarRating"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="10"
        android:thumbTint="@color/black"
        android:progressTint="@color/black"
        android:progressBackgroundTint="@color/black"
        android:progress="5" />

    <Button
        android:id="@+id/buttonSubmitRate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate"
        android:backgroundTint="@color/black"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp" />
</LinearLayout>
